--- a/Training Code/Week 3/Tapas/Tapas.Web/Tapas.Web.csproj
+++ b/Training Code/Week 3/Tapas/Tapas.Web/Tapas.Web.csproj
@@ -109,6 +109,7 @@
     <Content Include="Views\Home\TestIndex.cshtml" />
     <Content Include="Views\Restaurants\Index.cshtml" />
     <Content Include="Views\Restaurants\Details.cshtml" />
+    <Content Include="Views\Restaurants\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
