--- a/Training Code/Week 3/Tapas/Tapas.DataLayer/Tapas.DataLayer.csproj
+++ b/Training Code/Week 3/Tapas/Tapas.DataLayer/Tapas.DataLayer.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Models\IEntity.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Reviews.cs" />
+    <Compile Include="Reviews.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
