--- a/Training Code/Week 3/Tapas/Tapas.DataLayer/App.config
+++ b/Training Code/Week 3/Tapas/Tapas.DataLayer/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TapasDb" connectionString="Data Source=sql1.ct84oz1lvh1v.us-east-1.rds.amazonaws.com;Initial Catalog=TapasDb2;Persist Security Info=True;User ID=sqladmin;Password=password123456" providerName="System.Data.SqlClient"/>
+    <add name="TapasDb" connectionString="Data Source=DESKTOP-3EEE01S;Initial Catalog=TapasDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
