--- a/Training Code/Week 3/Tapas/Tapas.DataLayer/Tapas.DataLayer.csproj
+++ b/Training Code/Week 3/Tapas/Tapas.DataLayer/Tapas.DataLayer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A72E6337-6FFA-4363-A3B5-D07E792BD4B0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tapas.DataLayer</RootNamespace>
     <AssemblyName>Tapas.DataLayer</AssemblyName>
@@ -59,11 +59,12 @@
       <DependentUpon>201805022036549_ChangeReviewsTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\IDbContext.cs" />
     <Compile Include="TapasContext.cs" />
     <Compile Include="Models\IEntity.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reviews.cs" />
+    <Compile Include="Models\Reviews.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
