--- a/Training Code/Week 3/Tapas/Tapas.Web.Tests/Tapas.Web.Tests.csproj
+++ b/Training Code/Week 3/Tapas/Tapas.Web.Tests/Tapas.Web.Tests.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework">
       <HintPath>..\packages\MSTest.TestFramework.1.1.17\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
@@ -56,6 +57,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\testContext.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -63,6 +65,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Tapas.DataLayer\Tapas.DataLayer.csproj">
+      <Project>{A72E6337-6FFA-4363-A3B5-D07E792BD4B0}</Project>
+      <Name>Tapas.DataLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Tapas.Web\Tapas.Web.csproj">
       <Project>{724CEAFF-8BE5-4230-A197-E41DB9B6B29B}</Project>
       <Name>Tapas.Web</Name>
