--- a/Training Code/Week 4/BasicWebApp/Jenkinsfile
+++ b/Training Code/Week 4/BasicWebApp/Jenkinsfile
@@ -4,7 +4,7 @@ node('master') {
             git 'https://github.com/1804-Apr-USFdotnet/kaur-code.git'
         }
         catch (exc) {
-            slackSend 'import failed!'
+            slackError('import')
             throw exc
         }
     }
@@ -16,7 +16,7 @@ node('master') {
             }
         }
         catch (exc) {
-            slackSend 'build failed!'
+            slackError('build')
             throw exc
         }
     }
@@ -27,7 +27,7 @@ node('master') {
             }
         }
         catch (exc) {
-            slackSend color: 'danger', message: 'test failed!'
+            slackError('test')
             throw exc
         }
     }
@@ -37,7 +37,7 @@ node('master') {
             }
         }
         catch (exc) {
-            slackSend 'analyze failed!'
+            slackError('analyze')
             throw exc
         }
     }
@@ -50,7 +50,7 @@ node('master') {
             }
         }
         catch (exc) {
-            slackSend 'package failed!'
+            slackError('package')
             throw exc
         }
     }
@@ -63,8 +63,12 @@ node('master') {
             }
         }
         catch (exc) {
-            slackSend 'deploy failed!'
+            slackError('deploy')
             throw exc
         }
     }
+}
+
+def slackError(stageName) {
+    slackSend color: 'danger', message: "${stageName} stage failed. [<${JOB_URL}|${env.JOB_NAME}> <${env.BUILD_URL}console|${env.BUILD_DISPLAY_NAME}>] [${currentBuild.durationString[0..-14]}]"
 }
