--- a/Training Code/Week 4/RestaurantReviews/Jenkinsfile
+++ b/Training Code/Week 4/RestaurantReviews/Jenkinsfile
@@ -23,6 +23,7 @@ node('master') {
     stage('test') {
         try {
             dir('Training Code/Week 4/RestaurantReviews') {
+                bat "VSTest.Console RestaurantReviews.Tests\\bin\\Debug\\RestaurantReviews.Tests.dll"
             }
         }
         catch (exc) {
@@ -34,7 +35,8 @@ node('master') {
         try {
             dir('Training Code/Week 4/RestaurantReviews') {
                 bat 'SonarScanner.MSBuild begin /k:restaurant_reviews /v:0.1.0 /d:sonar.verbose=true'
-                bat 'msbuild /t:rebuild RestaurantReviews.sln'
+                bat 'msbuild /t:rebuild'
+                bat "VSTest.Console RestaurantReviews.Tests\\bin\\Debug\\RestaurantReviews.Tests.dll /EnableCodeCoverage"
                 bat 'SonarScanner.MSBuild end'
             }
         }
