--- a/Training Code/Week 4/RestaurantReviews/Jenkinsfile
+++ b/Training Code/Week 4/RestaurantReviews/Jenkinsfile
@@ -36,7 +36,7 @@ node('master') {
             dir('Training Code/Week 4/RestaurantReviews') {
                 bat 'SonarScanner.MSBuild begin /k:restaurant_reviews /v:0.1.0 /d:sonar.verbose=true'
                 bat 'msbuild /t:rebuild'
-                bat "VSTest.Console RestaurantReviews.Tests\\bin\\Debug\\RestaurantReviews.Tests.dll /EnableCodeCoverage"
+                // bat "VSTest.Console RestaurantReviews.Tests\\bin\\Debug\\RestaurantReviews.Tests.dll /EnableCodeCoverage"
                 bat 'SonarScanner.MSBuild end'
             }
         }
