--- a/Training Code/Week 4/RestaurantReviews/Jenkinsfile
+++ b/Training Code/Week 4/RestaurantReviews/Jenkinsfile
@@ -35,7 +35,7 @@ node('master') {
         try {
             dir('Training Code/Week 4/RestaurantReviews') {
                 bat 'SonarScanner.MSBuild begin /k:restaurant_reviews /v:0.1.0 /d:sonar.verbose=true'
-                bat '"C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\BuildTools\\MSBuild\\15.0\\Bin\\MSBuild.exe" /t:rebuild'
+                bat 'msbuild /t:rebuild'
                 // bat "VSTest.Console RestaurantReviews.Tests\\bin\\Debug\\RestaurantReviews.Tests.dll /EnableCodeCoverage"
                 bat 'SonarScanner.MSBuild end'
             }
