--- a/Training Code/Week 4/ConversionService/RestaurantDataLibrary/RestaurantDataLibrary.csproj
+++ b/Training Code/Week 4/ConversionService/RestaurantDataLibrary/RestaurantDataLibrary.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A72E6337-6FFA-4363-A3B5-D07E792BD4B0}</ProjectGuid>
+    <ProjectGuid>{3D4181D7-8574-43E1-BC61-CA7A37C7F18D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tapas.DataLayer</RootNamespace>
-    <AssemblyName>Tapas.DataLayer</AssemblyName>
+    <RootNamespace>RestaurantDataLibrary</RootNamespace>
+    <AssemblyName>RestaurantDataLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,19 +29,18 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,33 +49,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\201805022009476_InitialCreate.cs" />
-    <Compile Include="Migrations\201805022009476_InitialCreate.Designer.cs">
-      <DependentUpon>201805022009476_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201805022036549_ChangeReviewsTable.cs" />
-    <Compile Include="Migrations\201805022036549_ChangeReviewsTable.Designer.cs">
-      <DependentUpon>201805022036549_ChangeReviewsTable.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\IDbContext.cs" />
-    <Compile Include="TapasContext.cs" />
-    <Compile Include="Models\BaseEntity.cs" />
-    <Compile Include="Models\Restaurant.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Reviews.cs" />
+    <Compile Include="rest.cs" />
+    <Compile Include="RestaurantModel.cs" />
+    <Compile Include="Review.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201805022009476_InitialCreate.resx">
-      <DependentUpon>201805022009476_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201805022036549_ChangeReviewsTable.resx">
-      <DependentUpon>201805022036549_ChangeReviewsTable.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
