--- a/Training Code/Week 6/ManualAngular/package.json
+++ b/Training Code/Week 6/ManualAngular/package.json
@@ -10,6 +10,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@types/node": "^10.1.2",
+    "core-js": "^2.5.6",
     "http-server": "^0.11.1",
     "rxjs": "^6.2.0",
     "typescript": "^2.8.3",
