--- a/Training Code/Week 6/AngularApp/Jenkinsfile
+++ b/Training Code/Week 6/AngularApp/Jenkinsfile
@@ -45,7 +45,7 @@ node('master') {
     stage('package') {
         try {
             dir('Training Code/Week 6/AngularApp') {
-                bat 'npm run build --base-href /angularapp1/ --prod'
+                bat 'npm run build -- --base-href /angularapp1/ --prod'
                 bat 'copy /y web.config dist'
                 // // ng build inside jenkins workspace doesn't
                 // bat 'copy /y src\\favicon.ico dist'
