--- a/Training Code/Week 6/AngularApp/Jenkinsfile
+++ b/Training Code/Week 6/AngularApp/Jenkinsfile
@@ -60,8 +60,8 @@ node('master') {
     }
     stage('deploy') {
         try {
-            dir('Training Code/Week 6/AngularApp') {
-                bat "msdeploy -verb:sync -source:contentPath=\"%CD%\\dist\" -dest:contentPath=\"Default Web Site/angularapp1\",wmsvc=ec2-52-205-188-6.compute-1.amazonaws.com,userName=Administrator,password=\"${env.angular_deploy_password}\" -enableRule:AppOffline -allowUntrusted"
+            dir('Training Code/Week 6/AngularApp/dist/AngularApp') {
+                bat "msdeploy -verb:sync -source:contentPath=\"%CD%\" -dest:contentPath=\"Default Web Site/angularapp1\",wmsvc=ec2-52-205-188-6.compute-1.amazonaws.com,userName=Administrator,password=\"${env.angular_deploy_password}\" -enableRule:AppOffline -allowUntrusted"
             }
         }
         catch (exc) {
