--- a/Training Code/Week 7/DockerizedMvc2/DockerizedMvc2.Api/Dockerfile
+++ b/Training Code/Week 7/DockerizedMvc2/DockerizedMvc2.Api/Dockerfile
@@ -9,7 +9,7 @@ COPY . .
 # package restore (looks at .csproj for nuget packages)
 RUN dotnet restore
 RUN dotnet build
-RUN dotnet test
+# RUN dotnet test
 # sonarqube
 RUN dotnet publish -o ./out
 
