--- a/Training Code/Week 7/DockerizedMvc2/DockerizedMvc2/.dockerignore
+++ b/Training Code/Week 7/DockerizedMvc2/DockerizedMvc2/.dockerignore
@@ -1,4 +1,5 @@
 connections.config
+Dockerfile
 Package/
 
 # Created by https://www.gitignore.io/api/node,macos,csharp,windows,visualstudio,visualstudiocode
